--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
       - 'v*.*.*'
 
 jobs:
-  docker:
+  docker-ubuntu:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -20,10 +20,10 @@ jobs:
           images: |
             dongsxyz/python-supervisord
           tags: |
-            type=ref,event=tag
-            type=sha
             type=raw,value=latest
-            type=semver,pattern={{version}}
+            type=raw,value=ubuntu-latest
+            type=raw,value=ubuntu
+            type=semver,pattern=ubuntu-{{version}}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -37,6 +37,47 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
+          push: true
+          file: "./Dockerfile"
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+  docker-alpine:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            dongsxyz/python-supervisord
+          tags: |
+            type=raw,value=alpine-latest
+            type=raw,value=alpine
+            type=semver,pattern=alpine-{{version}}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          file: "./Dockerfile"
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+      - name: Build (Alpine) and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: "./alpine.Dockerfile"
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
